# django-swingtime

./: .coveragerc  .dockerignore  .gitignore  .travis.yml  AUTHORS.rst  AUTHORS.txt  Dockerfile  LICENSE  LICENSE.txt  MANIFEST.in  README.markdown  README.md  README.rst  pyproject.toml  pytest.ini  requirements.txt  run  setup.cfg  setup.py  tasks.py  tox.ini
.github/workflows/: test.yml
demo/: manage.py  requirements.txt  rundemo  settings.py  swingtime_settings.py  swtest  urls.py  views.py  wsgi.py
demo/demo_site/: settings.py  urls.py  wsgi.py
demo/demo_site/media/css/: demo.css
demo/demo_site/templates/: base.html  intro.html  karate.html
demo/demo_site/templates/swingtime/: add_event.html  daily_view.html  event_detail.html  monthly_view.html  occurrence_detail.html
demo/karate/: forms.py  management.py  models.py  urls.py  views.py
demo/karate/fixtures/: initial_data.json
demo/karate/management/commands/: loaddemo.py  run_demo.py
demo/karate/migrations/: 0001_initial.py  0002_data.py
demo/karate/templates/karate/: upcoming_by_event_type.html
demo/media/css/: demo.css
demo/resources/scripts/: django.wsgi
demo/templates/: 404.html  500.html  base.html  intro.html  karate.html
demo/templates/swingtime/: add_event.html  all_events.html  annual_view.html  daily_view.html  event_detail.html  event_form_part.html  event_list.html  monthly_view.html  occurrence_detail.html  recurring_form_part.html  yearly_view.html
docs/: Makefile  api.html  authors.html  changes.html  changes.rst  conf.html  conf.py  demo.html  demo.rst  forms.html  forms.rst  genindex.html  index.html  index.rst  installation.html  installation.rst  intro.html  intro.rst  models.html  models.rst  objects.inv  py-modindex.html  search.html  searchindex.js  swingtime_settings.html  swingtime_settings.rst  utils.html  utils.rst  views.html
docs/_sources/: changes.rst.txt  conf.rst.txt  demo.rst.txt  installation.rst.txt  intro.rst.txt  utils.rst.txt
docs/_sources/autosummary/: swingtime.base_models.rst.txt  swingtime.models.rst.txt  swingtime.views.rst.txt
docs/autosummary/: swingtime.base_forms.html  swingtime.base_models.html  swingtime.cbv_views.html  swingtime.forms.html  swingtime.models.html  swingtime.utils.html  swingtime.views.html
docs/doctrees/: authors.doctree  changes.doctree  conf.doctree  demo.doctree  environment.pickle  forms.doctree  index.doctree  installation.doctree  intro.doctree  models.doctree  swingtime_settings.doctree  utils.doctree  views.doctree
docs/source/: changes.txt  conf.py  index.txt  installation.txt  intro.txt  swingtime_settings.txt
docs/src/: api.rst  changes.rst  conf.py  demo.rst  docs_settings.py  index.rst  installation.rst  views.rst
docs/src/autosummary/: swingtime.base_forms.rst  swingtime.cbv_views.rst  swingtime.forms.rst  swingtime.utils.rst
requirements/: base.txt  dev.txt
swingtime/: __init__.py  admin.py  apps.py  base_forms.py  base_models.py  conf.py  context_processors.py  forms.py  models.py  tests.py  urls.py  urls_v3.py  utils.py  views.py
swingtime/conf/: __init__.py  swingtime_settings.py
swingtime/fixtures/: swingtime_test.json
swingtime/locale/de/LC_MESSAGES/: django.po
swingtime/migrations/: 0001_initial.py  0002_alter_occurrence_options_alter_event_id_and_more.py
tests/: base.html  conftest.py  cover  helpers.py  manage.py  settings.py  test_cbv.py  test_fbv.py  test_settings.py  test_swingtime.py  test_views.py  urls.py
tests/old_templates/swingtime/: event_detail.html  monthly_view.html
