[metadata]
license_file = LICENSE

[pycodestyle]
exclude = demo,demos,docs,tests,swingtime/migrations/*
ignore =
max-line-length = 100

[tool:pytest]
DJANGO_SETTINGS_MODULE=demo.settings
django_find_project=false
addopts=-rf

[coverage:run]
branch = True
source = swingtime
include =

omit =  **/requirements/**
        **/tests/**
        **/migrations/**

[coverage:html]
directory = build/coverage
title = Swingtime Coverage report

[coverage:report]
ignore_errors = True

# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug
    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError
    # Don't complain if non-runnable code isn't run:
    if __name__ == .__main__.:

